<resources>
    <string name="app_name">Pokemon Type Checker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pokemon Type Checker</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_nav_item_import">Import</string>
    <string name="drawer_nav_item_gallery">Gallery</string>
    <string name="drawer_nav_item_slideshow">Slideshow</string>
    <string name="drawer_nav_item_tools">Tools</string>
    <string name="drawer_nav_item_share">Share</string>
    <string name="drawer_nav_item_send">Send</string>
    <string name="drawer_nav_title_communicate">Communicate</string>
    <string name="title_activity_temp">TempActivity</string>
    <string name="loading_error_message">Whoops, we couldn\'t load the results.</string>
    <string name="_4x_damage">4x Damage</string>
    <string name="_2x_damage">2x Damage</string>
    <string name="normal_damage">Normal Damage</string>
    <string name="_0_5x_damage">0.5x Damage</string>
    <string name="_0_25x_damage">0.25x Damage</string>
    <string name="no_damage">No Damage</string>
    <string name="sprite_look_up">https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/%1$s.png</string>
</resources>
